<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/searchCity"
        android:title="@string/searchCity"
        app:showAsAction="never"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>